cdk.out/ordernimbus-staging-networking.template.json
{
 "Description": "Networking infrastructure for staging environment",
 "Resources": {
  "VPCB9E5F0B4": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/Resource"
   }
  },
  "VPCPublicSubnet1SubnetB4246D30": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1b",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet1/Subnet"
   }
  },
  "VPCPublicSubnet1RouteTableFEE4B781": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet1/RouteTable"
   }
  },
  "VPCPublicSubnet1RouteTableAssociation0B0896DC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet1SubnetB4246D30"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VPCPublicSubnet1DefaultRoute91CEF279": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCPublicSubnet1RouteTableFEE4B781"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet1/DefaultRoute"
   }
  },
  "VPCPublicSubnet1EIP6AD938E8": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet1/EIP"
   }
  },
  "VPCPublicSubnet1NATGatewayE0556630": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VPCPublicSubnet1EIP6AD938E8",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet1SubnetB4246D30"
    },
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PublicSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ]
   },
   "DependsOn": [
    "VPCPublicSubnet1DefaultRoute91CEF279",
    "VPCPublicSubnet1RouteTableAssociation0B0896DC"
   ],
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet1/NATGateway"
   }
  },
  "VPCPublicSubnet2Subnet74179F39": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1c",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PublicSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet2/Subnet"
   }
  },
  "VPCPublicSubnet2RouteTable6F1A15F1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PublicSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet2/RouteTable"
   }
  },
  "VPCPublicSubnet2RouteTableAssociation5A808732": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
    },
    "SubnetId": {
     "Ref": "VPCPublicSubnet2Subnet74179F39"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VPCPublicSubnet2DefaultRouteB7481BBA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "RouteTableId": {
     "Ref": "VPCPublicSubnet2RouteTable6F1A15F1"
    }
   },
   "DependsOn": [
    "VPCVPCGW99B986DC"
   ],
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PublicSubnet2/DefaultRoute"
   }
  },
  "VPCPrivateSubnet1Subnet8BCA10E0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1b",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PrivateSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet1/Subnet"
   }
  },
  "VPCPrivateSubnet1RouteTableBE8A6027": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PrivateSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet1/RouteTable"
   }
  },
  "VPCPrivateSubnet1RouteTableAssociation347902D1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
    },
    "SubnetId": {
     "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VPCPrivateSubnet1DefaultRouteAE1D6490": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCPublicSubnet1NATGatewayE0556630"
    },
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet1RouteTableBE8A6027"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "VPCPrivateSubnet2SubnetCFCDAA7A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1c",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PrivateSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet2/Subnet"
   }
  },
  "VPCPrivateSubnet2RouteTable0A19E10E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/PrivateSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet2/RouteTable"
   }
  },
  "VPCPrivateSubnet2RouteTableAssociation0C73D413": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet2RouteTable0A19E10E"
    },
    "SubnetId": {
     "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VPCPrivateSubnet2DefaultRouteF4F5CFD2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPCPublicSubnet1NATGatewayE0556630"
    },
    "RouteTableId": {
     "Ref": "VPCPrivateSubnet2RouteTable0A19E10E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "VPCDatabaseSubnet1Subnet3E790B6F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1b",
    "CidrBlock": "10.0.4.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/DatabaseSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/DatabaseSubnet1/Subnet"
   }
  },
  "VPCDatabaseSubnet1RouteTable50155611": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/DatabaseSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/DatabaseSubnet1/RouteTable"
   }
  },
  "VPCDatabaseSubnet1RouteTableAssociation56EE26FE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCDatabaseSubnet1RouteTable50155611"
    },
    "SubnetId": {
     "Ref": "VPCDatabaseSubnet1Subnet3E790B6F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/DatabaseSubnet1/RouteTableAssociation"
   }
  },
  "VPCDatabaseSubnet2Subnet93B13DD5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-1c",
    "CidrBlock": "10.0.4.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/DatabaseSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/DatabaseSubnet2/Subnet"
   }
  },
  "VPCDatabaseSubnet2RouteTable5A3ECF56": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC/DatabaseSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/DatabaseSubnet2/RouteTable"
   }
  },
  "VPCDatabaseSubnet2RouteTableAssociation2350B25C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPCDatabaseSubnet2RouteTable5A3ECF56"
    },
    "SubnetId": {
     "Ref": "VPCDatabaseSubnet2Subnet93B13DD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/DatabaseSubnet2/RouteTableAssociation"
   }
  },
  "VPCIGWB7E252D3": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPC"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/IGW"
   }
  },
  "VPCVPCGW99B986DC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VPCIGWB7E252D3"
    },
    "VpcId": {
     "Ref": "VPCB9E5F0B4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/VPCGW"
   }
  },
  "VPCRestrictDefaultSecurityGroupCustomResource59474679": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "VPCB9E5F0B4",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "335021149718"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-west-1:335021149718:security-group/",
             {
              "Fn::GetAtt": [
               "VPCB9E5F0B4",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-335021149718-us-west-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "VPCFlowLogIAMRoleC2FCB1C7": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "vpc-flow-logs.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPCFlowLog"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPCFlowLog/IAMRole/Resource"
   }
  },
  "VPCFlowLogIAMRoleDefaultPolicy07C64305": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:DescribeLogStreams",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "VPCFlowLogLogGroupA7C61619",
         "Arn"
        ]
       }
      },
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "VPCFlowLogIAMRoleC2FCB1C7",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "VPCFlowLogIAMRoleDefaultPolicy07C64305",
    "Roles": [
     {
      "Ref": "VPCFlowLogIAMRoleC2FCB1C7"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPCFlowLog/IAMRole/DefaultPolicy/Resource"
   }
  },
  "VPCFlowLogLogGroupA7C61619": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731,
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPCFlowLog"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPCFlowLog/LogGroup/Resource"
   }
  },
  "VPCFlowLog8FA5601E": {
   "Type": "AWS::EC2::FlowLog",
   "Properties": {
    "DeliverLogsPermissionArn": {
     "Fn::GetAtt": [
      "VPCFlowLogIAMRoleC2FCB1C7",
      "Arn"
     ]
    },
    "LogDestinationType": "cloud-watch-logs",
    "LogGroupName": {
     "Ref": "VPCFlowLogLogGroupA7C61619"
    },
    "ResourceId": {
     "Ref": "VPCB9E5F0B4"
    },
    "ResourceType": "VPC",
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Name",
      "Value": "ordernimbus-staging-networking/VPCFlowLog"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ],
    "TrafficType": "ALL"
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/VPCFlowLog/FlowLog"
   }
  },
  "ECSCluster7D463CD4": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "staging-forecasting-cluster",
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ],
    "Tags": [
     {
      "Key": "CostCenter",
      "Value": "Engineering"
     },
     {
      "Key": "Environment",
      "Value": "staging"
     },
     {
      "Key": "Owner",
      "Value": "Platform-Team"
     },
     {
      "Key": "Project",
      "Value": "OrderNimbus-Forecasting"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/ECSCluster/Resource"
   }
  },
  "ECSClusterF6D1FAD0": {
   "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
   "Properties": {
    "CapacityProviders": [
     "FARGATE",
     "FARGATE_SPOT"
    ],
    "Cluster": {
     "Ref": "ECSCluster7D463CD4"
    },
    "DefaultCapacityProviderStrategy": []
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/ECSCluster/ECSCluster"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WPQWvCQBCFf4v3das59ZqGVgRpQyxey2Qd09XNTtiZNUjIfy8xagqlp/fNe8NjJtHJ4lkvZtDy3OxPc2dL3W0FzElBy18dmkR3u8ao7OB3eabyWDprtrH0KIM3UUFR8BNKh5M/eSkzGQtiyT+WB3hd54O8g6xAsIWLyoM9g+BUvPaCweNjYbzkNqUiYL5r9KLeHLUbqob8hr2yUOuuoPGmq+bkrLmWjNQrRxXrbkPVKlBshuTOvULDustcZMEwJH8xgwaMlUse6Gz3GH49yn2vCmSKwaDKIgvV03jw/0T3ohdgVCkzylagsv762EeUJkqvPO1RH/npnCz0cqmXsyNbOw/Ri61RF6P+AOUH6rfcAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "ordernimbus-staging-networking/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "VPCB9E5F0B4"
   },
   "Export": {
    "Name": "staging-vpc-id"
   }
  },
  "EcsClusterName": {
   "Description": "ECS Cluster Name",
   "Value": {
    "Ref": "ECSCluster7D463CD4"
   },
   "Export": {
    "Name": "staging-ecs-cluster-name"
   }
  },
  "ExportsOutputRefVPCB9E5F0B4BD23A326": {
   "Value": {
    "Ref": "VPCB9E5F0B4"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefVPCB9E5F0B4BD23A326"
   }
  },
  "ExportsOutputRefVPCDatabaseSubnet1Subnet3E790B6FCC2F250A": {
   "Value": {
    "Ref": "VPCDatabaseSubnet1Subnet3E790B6F"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefVPCDatabaseSubnet1Subnet3E790B6FCC2F250A"
   }
  },
  "ExportsOutputRefVPCDatabaseSubnet2Subnet93B13DD5FBB3CDD7": {
   "Value": {
    "Ref": "VPCDatabaseSubnet2Subnet93B13DD5"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefVPCDatabaseSubnet2Subnet93B13DD5FBB3CDD7"
   }
  },
  "ExportsOutputRefVPCPublicSubnet1SubnetB4246D30D84F935B": {
   "Value": {
    "Ref": "VPCPublicSubnet1SubnetB4246D30"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefVPCPublicSubnet1SubnetB4246D30D84F935B"
   }
  },
  "ExportsOutputRefVPCPublicSubnet2Subnet74179F3969CC10AD": {
   "Value": {
    "Ref": "VPCPublicSubnet2Subnet74179F39"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefVPCPublicSubnet2Subnet74179F3969CC10AD"
   }
  },
  "ExportsOutputRefECSCluster7D463CD47A8DFE2F": {
   "Value": {
    "Ref": "ECSCluster7D463CD4"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefECSCluster7D463CD47A8DFE2F"
   }
  },
  "ExportsOutputRefVPCPrivateSubnet1Subnet8BCA10E01F79A1B7": {
   "Value": {
    "Ref": "VPCPrivateSubnet1Subnet8BCA10E0"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefVPCPrivateSubnet1Subnet8BCA10E01F79A1B7"
   }
  },
  "ExportsOutputRefVPCPrivateSubnet2SubnetCFCDAA7AB22CF85D": {
   "Value": {
    "Ref": "VPCPrivateSubnet2SubnetCFCDAA7A"
   },
   "Export": {
    "Name": "ordernimbus-staging-networking:ExportsOutputRefVPCPrivateSubnet2SubnetCFCDAA7AB22CF85D"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
